--- a/2021-Applied.ipynb
+++ b/2021-Applied.ipynb
@@ -124,7 +124,7 @@
     "N0 <- N - sum(x) # number of control\n",
     "y0 <- rnorm(n = N0, mean = 0, sd = sigma0) # generate y0\n",
     "y1 <- rnorm(n = N1, mean = 0, sd = sqrt(k * sigma0^2)) # generate y1\n",
-    "p <- t.test(x = y0, y = y1, var.eq = F)$p.value # t-test\n",
+    "p <- t.test(x = y0, y = y1, var.eq = F)$p.value # t-test unequal variance\n",
     "results[j, 1] <- as.numeric(p < 0.05) # store results\n",
     "}\n",
     "return(colMeans(results)) # return the average\n",
